--- a/myfromscratchpage.html
+++ b/myfromscratchpage.html
@@ -10,7 +10,7 @@
 <body class="masthead" style="background-image: url('assets/img/messiphototough.jpg')">   
 <div>
     <nav>
-        <a href="../index.html">Home Page</a>
+        <a href="index.html">Home Page</a>
         <a href="https://www.biography.com/athletes/lionel-messi">Leo Messi Biography</a>
     </nav>    
 </div>
